--- a/style.css
+++ b/style.css
@@ -1,5 +1,116 @@
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Roboto&display=swap");
+
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
+body {
+  font-family: "Roboto", sans-serif;
+}
+
+.main-container {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  height: 100vh;
+}
+
+.header {
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.side-bar {
+  grid-column: 1;
+  grid-row: 1 / 5;
+  display: grid;
+  /* grid-template-rows: repeat(auto-fit, minmax(50px, 1fr)); */
+  grid-template-rows: repeat(3, 1fr);
+  background-color: #0369a1;
+  color: #fff;
+  justify-content: start;
+  padding: 20px;
+}
+
+.view .dashboard-icon {
+  height: 30px;
+  width: 30px;
+}
+
+.logo {
+  font-family: "Lobster", cursive;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #fff;
+  letter-spacing: 5px;
+  margin-top: 3px;
+}
+
+.view {
+  margin-top: 10px;
+}
+
+.nav-1,
+.nav-2 {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.nav-1 {
+  margin-top: -20vh;
+}
+
+.nav-2 {
+  margin-top: -15vh;
+}
+
+.view {
+  display: flex;
+  gap: 10px;
+}
+
+.nav-1 > div,
+.nav-2 > div {
+  display: flex;
+  gap: 20px;
+}
+
+div[class$="-icon"] {
+  height: 18px;
+  width: 18px;
+  filter: invert(100%) sepia(100%) saturate(2%) hue-rotate(209deg)
+    brightness(102%) contrast(101%);
+}
+
+.main-content {
+  grid-column: 2;
+  grid-row: 2 / 5;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 0.5fr 1fr 1fr 1fr;
+  background-color: #a8a29e;
+}
+
+#your-projects {
+  grid-column: 1 / 2;
+  display: flex;
+  gap: calc(100% / 2);
+}
+
+#tasks-list {
+  grid-column: 3 / 4;
+}
+
+.project-cards {
+  grid-column: 1 / 3;
+  grid-row: 2 / 5;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+.widgets {
+  margin-top: 30px;
+}
