--- a/style.css
+++ b/style.css
@@ -20,6 +20,46 @@ body {
 .header {
   grid-column: 2;
   grid-row: 1;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  padding: 20px;
+}
+
+.search-bar {
+    grid-column: 1 / 3;
+    grid-row: 1;
+    display: flex;
+    gap: 10px;
+}
+
+.profile-status-small {
+    grid-column: 3;
+    grid-row: 1;
+}
+
+.profile-status-large {
+    grid-column: 1 / 3;
+}
+
+.profile-btn {
+    grid-column: 3;
+}
+
+.search-bar .search-icon {
+    filter: brightness(0) saturate(100%) invert(0%) sepia(0%) saturate(0%) hue-rotate(262deg) brightness(102%) contrast(103%);
+    margin-top: 2px;
+}
+
+.search-input input {
+    outline: none;
+    border-radius: 30px;
+    border: #e0dddb;
+    width: 600px;
+    padding: 3px;
+    padding-left: 5px;
+    background-color: #e0dddb;
+    caret-color: #fff;
 }
 
 .side-bar {
@@ -91,7 +131,7 @@ div[class$="-icon"] {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 0.5fr 1fr 1fr 1fr;
-  background-color: #a8a29e;
+  background-color: #e0dddb;
 }
 
 #your-projects {
