--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 4fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
-  height: 100vh;
+  height: 120vh;
 }
 
 .header {
@@ -24,6 +24,7 @@ body {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   padding: 20px;
+  /* padding-left: 20px; */
 }
 
 .search-bar {
@@ -36,26 +37,91 @@ body {
 .profile-status-small {
     grid-column: 3;
     grid-row: 1;
+    display: flex;
+    gap: 20px;
+}
+
+/* .profile-status-small .notification-icon {
+    height: 20px;
+    width: 20px;
+} */
+
+.profile-pic-small {
+    height: 30px;
+    width: 30px;
+    border-radius: 15px;
+    background: url('https://images.unsplash.com/photo-1691673236501-3023c988eb2b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80');
+    background-position: center;
+    background-size: cover;
+    margin-top: -4px;
+}
+
+.profile-name-small {
+    font-weight: bold;
+    font-size: 14px;
+    margin-top: 3px;
 }
 
 .profile-status-large {
     grid-column: 1 / 3;
+    display: flex;
+    gap: 10px;
+}
+
+.profile-pic-large {
+    height: 50px;
+    width: 50px;
+    border-radius: 25px;
+    background: url('https://images.unsplash.com/photo-1691673236501-3023c988eb2b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80');
+    background-position: center;
+    background-size: cover;
+}
+
+.profile-name-large {
+    font-weight: bold;
+    margin-top: 3px;
+}
+
+.profile-name-large .greeting {
+    font-size: 12px;
 }
 
 .profile-btn {
     grid-column: 3;
+    display: flex;
+    align-items: flex-start;
+    gap: 10px;
+}
+
+.profile-btn button {
+    width: 100px;
+    border: none;
+    padding: 10px;
+    border-radius: 15px;
+    background: #0369a1;
+    color: #fff;
+}
+
+div[class$="-icon"] {
+    height: 18px;
+    width: 18px;
+}
+
+.header div[class$="-icon"] {
+    filter: brightness(0) saturate(100%) invert(0%) sepia(0%) saturate(0%) hue-rotate(262deg) brightness(102%) contrast(103%);
+    margin-top: 2px;
 }
 
 .search-bar .search-icon {
-    filter: brightness(0) saturate(100%) invert(0%) sepia(0%) saturate(0%) hue-rotate(262deg) brightness(102%) contrast(103%);
-    margin-top: 2px;
+    /* filter: brightness(0) saturate(100%) invert(0%) sepia(0%) saturate(0%) hue-rotate(262deg) brightness(102%) contrast(103%);
+    margin-top: 2px; */
 }
 
 .search-input input {
     outline: none;
     border-radius: 30px;
     border: #e0dddb;
-    width: 600px;
+    width: 500px;
     padding: 3px;
     padding-left: 5px;
     background-color: #e0dddb;
@@ -118,9 +184,7 @@ body {
   gap: 20px;
 }
 
-div[class$="-icon"] {
-  height: 18px;
-  width: 18px;
+.side-bar div[class$="-icon"] {
   filter: invert(100%) sepia(100%) saturate(2%) hue-rotate(209deg)
     brightness(102%) contrast(101%);
 }
@@ -132,6 +196,7 @@ div[class$="-icon"] {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 0.5fr 1fr 1fr 1fr;
   background-color: #e0dddb;
+  padding: 20px;
 }
 
 #your-projects {
